# cub3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  check.c  cub3d  cub3d.h  example.cub  exemple.cub  main.c
Include/: cub3d.h  get_next_line.h
Include_bonus/: cub3d_bonus.h  get_next_line_bonus.h
minilibx/: Makefile.gen  mlx_int.h  mlx_png.c  mlx_png.h  mlx_xpm.c
minilibx_linux/test/: mlx-test
src/: check.c  clean_exit.c  free_utils.c  init_data.c  init_map.c  init_mlx.c  main.c  main_1.c
src/game/: choice_textute.c  game_utils.c  init_raycast.c  loop_mlx.c  player_move.c  raycasting.c  textures.c
src/get_next_line/: get_next_line.c
src/parser/: check_around_space.c  check_map.c  check_map_utils.c  check_rgb.c  element_parsing.c  get_player_pos.c  map_parsing.c  open_file.c  parse_utils.c  read_file.c
src_bonus/: check_bonus.c  clean_exit_bonus.c  free_utils_bonus.c  init_data_bonus.c  init_map_bonus.c  init_mlx_bonus.c  main_bonus.c
src_bonus/game_bonus/: choice_textute_bonus.c  game_utils_bonus.c  init_raycast_bonus.c  loop_mlx_bonus.c  minimap_bonus.c  mouse_utils_bonus.c  player_move_bonus.c  raycasting_bonus.c  textures_bonus.c
src_bonus/get_next_line_bonus/: get_next_line_bonus.c
src_bonus/parser_bonus/: check_around_space_bonus.c  check_map_bonus.c  check_map_utils_bonus.c  check_rgb_bonus.c  element_parsing_bonus.c  get_player_pos_bonus.c  map_parsing_bonus.c  open_file_bonus.c  parse_utils_bonus.c  read_file_bonus.c
txts/: lol1.xpm  lol2j.xpm  mdupuis.xpm  ranuytte.xpm  wall1.xpm  wall3.xpm
txts_xpm/: anime1.xpm  anime2.xpm  anime3.xpm  anime4.xpm  cereg.xpm  kirill.xpm  wall2.xpm  wall4.xpm
